--- a/win.html
+++ b/win.html
@@ -9,7 +9,7 @@
 <body>
     <div class="cons">
     <h1>Woaahhhh❗💪
-    <br>Congrats🤩You won the Match💯</h1>
+    <br>Congrats🤩You won the Match💯!!</h1>
 </div>
 </body>
 </html>
